--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "antd": "^5.14.0",
     "aos": "^2.3.4",
     "axios": "^1.6.7",
-    "firebase": "^10.8.0" ,
+    "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.2",
@@ -23,6 +23,7 @@
     "primereact": "^10.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-form-stepper": "^2.0.3",
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
@@ -66,7 +67,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
-
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   }
