--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "sweetalert2": "^11.10.7",
+    "sweetalert2-react-content": "^5.0.7",
     "tw-elements-react": "^1.0.0-alpha2",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0",
