--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ckeditor/ckeditor5-build-classic": "^41.3.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/x-data-grid": "^7.3.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,7 @@
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.2",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "preline": "^2.0.3",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -37,6 +39,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
     "sweetalert2-react-content": "^5.0.7",
     "tw-elements-react": "^1.0.0-alpha2",
