--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.3.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.3.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "6pp": "^1.2.16",
     "antd": "^5.14.0",
     "aos": "^2.3.4",
     "axios": "^1.6.7",
@@ -20,6 +25,7 @@
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.2",
     "formik": "^2.4.5",
+    "framer-motion": "^11.1.7",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
     "primeflex": "^3.3.1",
