--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.14.0",
     "aos": "^2.3.4",
     "axios": "^1.6.7",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "flowbite": "^2.2.0",
