--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://lawyer-backend-production-5a92.up.railway.app",
+  "proxy": "http://localhost:7012",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.3.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
@@ -21,6 +21,9 @@
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "browser-image-compression": "^2.0.2",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "flowbite": "^2.2.0",
@@ -45,7 +48,10 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
+    "react-vertical-timeline-component": "^3.6.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
     "sweetalert2-react-content": "^5.0.7",
