--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flowbite-react": "^0.7.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.1.7",
+    "material-react-table": "^2.13.0",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
     "primeflex": "^3.3.1",
