--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "primereact": "^10.5.3",
     "quill": "^1.3.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-form-stepper": "^2.0.3",
     "react-google-places-autocomplete": "^4.0.1",
